Update New Pages

--- a/certvault.html
+++ b/certvault.html
@@ -30,7 +30,7 @@
 
             <div class="site-branding">
 
-                <div class="site-logo logo">
+                <div class="site-logo">
                     <a href="index.html">
                         <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg">
                         <!-- <img alt="Site Logo Light" class="light-logo" src="/assets/resources/img/enigma-en-logo.svg"> -->
@@ -132,7 +132,7 @@
 
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
-            <div class="wrapper active" data-bgcolor="#f2f2f2">
+            <div class="wrapper active" data-bgcolor="#fff">
                 <div id="start" class="patra" data-humcolor="#fff" style="background: #F50D37;">
                     <div class="el1 el-bg"></div>
                     <div class="el2 el-bg"></div>
@@ -150,12 +150,11 @@
                     </picture>
                 </div>
 
-                <div id="cer" class="cer">
+                <div id="cer" class="cer" data-humcolor="#000">
                     <div data-scroll>
                         <div class="text_anim hdn">
                             <h2 data-scroll-target="#cer">
-                                <span>Certvault
-                                    Security Vault </span>
+                                <span>Certvault Vault </span>
                             </h2>
                         </div>
                     </div>
@@ -163,29 +162,32 @@
                         <div class="listi">
                             <ul>
                                 <li class="text_anim ">
-                                    <h5>CLIENT</h5>
-                                    <p>CertVault </p>
+                                    <h5><span>CLIENT</span></h5>
+                                    <p><span>CertVault</span> </p>
                                 </li>
                                 <li class="text_anim ">
-                                    <h5>Location</h5>
-                                    <p>California, USA</p>
+                                    <h5><span>Location</span></h5>
+                                    <p><span>California, USA</span></p>
                                 </li>
                                 <li class="text_anim ">
-                                    <h5>URL</h5>
-                                    <p>www.certvault.org</p>
+                                    <h5><span>URL</span></h5>
+                                    <p><a href=""><span>www.certvault.org</span></a></p>
                                 </li>
                                 <li class="text_anim ">
-                                    <h5>CREATIVE FIELD</h5>
-                                    <p>Security Vault</p>
+                                    <h5><span>CREATIVE FIELD</span></h5>
+                                    <p><span>Security Vault</span></p>
                                 </li>
                             </ul>
                         </div>
-                        <div class="f-left">
+                        <div class="f-left" data-scroll="">
                             <div class="text_anim spline_p">
-                                <p>CertVault is a cloud-based certificate repository and delivery system that can be
-                                    accessed by any party or organization that needs an insurance certificate. It
-                                    provides instant access to certificates for brokers, insureds,
-                                    holders, and carriers.</p>
+                                <p><span>
+                                        CertVault is a cloud-based certificate repository and delivery system that can
+                                        be
+                                        accessed by any party or organization that needs an insurance certificate. It
+                                        provides instant access to certificates for brokers, insureds,
+                                        holders, and carriers.
+                                    </span></p>
                             </div>
                             <div class="text_anim hdn">
                                 <h5 data-scroll-target="#cer">
@@ -193,27 +195,29 @@
                                 </h5>
                             </div>
                             <div class="text_anim spline_p">
-                                <p>Digital Product Design: UX Research, Concept Design, UX/UI Design, Interaction and
-                                    Motion Design</p>
+                                <p><span>
+                                        Digital Product Design: UX Research, Concept Design, UX/UI Design, Interaction
+                                        and
+                                        Motion Design
+                                    </span></p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div id="marquee">
+                <div id="marquee" class="m-b-10">
                     <div data-scroll data-scroll-target="#marquee">
                         <div>
                             <h2 data-scroll data-scroll-speed="2" data-scroll-direction="horizontal"><span>Security
                                     Vault</span></h2>
                         </div>
                         <figure data-scroll data-scroll-speed="2">
-                            <!-- <img alt="Capodanno Cinese" src="assets/resources/img/Certvault-Portfolio/web-anim.png"> -->
-                            <video autoplay preload="" loop>
-                                <source src="/cert-animation-v3.mp4" />
+                            <video loop="true" autoplay="autoplay" preload="true">
+                                <source src="/Certvault.mp4" />
                             </video>
                         </figure>
                     </div>
                 </div>
-                <div class="module padding_on_top_velocities" data-bgcolor="#E02826" data-humcolor="#fff">
+                <div class="module padding_on_top_velocities m-p" style="background: #E02826;" data-humcolor="#fff">
                     <div class="container-fluid">
                         <div class="row no-gutters justify-content-center">
                             <div class="col-1 margin_on_top_iota" data-scroll data-scroll-direction="vertical"
@@ -233,17 +237,23 @@
                         </div>
                     </div>
                 </div>
-                <div id="portf" class="sl-smal" data-bgcolor="#fff" data-humcolor="#000">
-                    <div data-scroll>
+                <div id="portf" class="grid_intern">
+                    <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
                                 <span>Color </span>
                             </h2>
                         </div>
                         <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -301,19 +311,27 @@
                             </h2>
                         </div>
                         <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span>
+                            </p>
                         </div>
                     </div>
-                    <div class="concept" data-scroll>
-                        <figure data-scroll data-scroll-speed="1">
-                            <img alt="fonts" src="assets/resources/img/Certvault-Portfolio/font-typo.png">
+                </div>
+                <div id="poster" class="blocco">
+                    <div class="left_block grid_intern" data-scroll>
+                        <figure>
+                            <img alt="" src="/assets/resources/img/Certvault-Portfolio/font-typo.png">
                         </figure>
                     </div>
                 </div>
-                <div id="portf" class="sl-smal" data-bgcolor="#fff" data-humcolor="#000">
-                    <div data-scroll>
+                <div id="portf" class="grid_intern">
+                    <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
                                 <span>Apps
@@ -321,9 +339,15 @@
                             </h2>
                         </div>
                         <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -334,7 +358,7 @@
                         </figure>
                     </div>
                 </div>
-                <div class="image-section" data-scroll data-bgcolor="#E02826" data-humcolor="#fff">
+                <div class="image-section" data-scroll style="background-color:#f50c37 ;" data-humcolor="#fff">
                     <div class="reveal img-right">
                         <img src="/assets/resources/img/Certvault-Portfolio/web-1.jpeg">
                     </div>
@@ -362,9 +386,15 @@
                             </h2>
                         </div>
                         <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -511,10 +541,6 @@
     <script src="/assets/vendors/lib/plugins.js"></script>
     <script src="/assets/resources/js/pages-js/preloader.js"></script>
     <script src="./assets/resources/js/cursor.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
