--- a/dmtca.html
+++ b/dmtca.html
@@ -133,7 +133,7 @@
    <main role="main" id="main">
       <div class="scroll-content smooth-scroll" data-scroll-speed="8">
          <div class="wrapper active" data-bgcolor="#fff">
-            <div id="start" class="dmtca" data-humcolor="#000" style="background: #50ebb7;">
+            <div id="start" class="dmtca" data-humcolor="#fff" style="background: #33b5f2;">
                <div class="el1 el-bg"></div>
                <div class="el2 el-bg"></div>
                <div class="el3 el-bg"></div>
@@ -155,7 +155,7 @@
                            class="" /></figure>
                   </div>
                </div>
-               <div id="project" data-scroll class="grid_intern" style="background: #50ebb7;">
+               <div id="project" data-scroll class="grid_intern" style="background: #33b5f2;">
                   <div>
                      <div data-scroll>
                         <div>
@@ -171,17 +171,27 @@
                                  <p><span>2020</span></p>
                               </li>
                               <li>
-                                 <h3><span>Creative Field</h3>
+                                 <h3><span>INDUSTRY</h3>
                                  </span>
                                  <p><span>Digital Agency</span></p>
+                              </li>
+                           </ul>
+                           <ul class="text_anim mt-2 grdi2">
+                              <li>
+                                 <h3><span>SERVICES</span></h3>
+                                 <p><span>Branding, Website Design, Digital Marketing</span></p>
                               </li>
                            </ul>
                         </div>
                         <div>
                            <div class="text_anim spline_p">
-                              <p>Like you, we manage Google Workspace and we don’t have time to waste managing all these
-                                 users, and group or worry about what they are sharing. That’s why we converted the IT
-                                 department wish list into a set of killer features.</p>
+                              <p><span>
+                                    Like you, we manage Google Workspace and we don’t have time to waste managing all
+                                    these
+                                    users, and group or worry about what they are sharing. That’s why we converted the
+                                    IT
+                                    department wish list into a set of killer features.
+                                 </span></p>
                            </div>
                         </div>
                         <div>
@@ -218,9 +228,12 @@
                      </h2>
                   </div>
                   <div class="text_anim spline_p">
-                     <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and costly.
-                        Let Patronum fully automate all the administrator and user tasks to ensure an effective and
-                        secure process.</p>
+                     <p><span>
+                           Provisioning and deprovisioning users within Google Workspace can be time-consuming and
+                           costly.
+                           Let Patronum fully automate all the administrator and user tasks to ensure an effective and
+                           secure process.
+                        </span></p>
                   </div>
                </div>
             </div>
@@ -245,14 +258,19 @@
                      </h2>
                   </div>
                   <div class="text_anim spline_p">
-                     <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and costly.
-                        Let Patronum fully automate all the administrator and user tasks to ensure an effective and
-                        secure process.</p>
+                     <p><span>
+                           Provisioning and deprovisioning users within Google Workspace can be time-consuming and
+                           costly.
+                           Let Patronum fully automate all the administrator and user tasks to ensure an effective and
+                           secure process.
+                        </span></p>
                   </div>
                </div>
-               <div class="concept" data-scroll>
-                  <figure data-scroll data-scroll-speed="1">
-                     <img alt="Capodanno Cinese" src="assets/resources/img/portfolio-dmtca/logo-concept.png">
+            </div>
+            <div id="poster" class="blocco">
+               <div class="left_block grid_intern" data-scroll>
+                  <figure>
+                     <img alt="" src="/assets/resources/img/portfolio-dmtca/logo-concept.png">
                   </figure>
                </div>
             </div>
@@ -264,18 +282,25 @@
                      </h2>
                   </div>
                   <div class="text_anim spline_p">
-                     <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and costly.
-                        Let Patronum fully automate all the administrator and user tasks to ensure an effective and
-                        secure process.</p>
+                     <p>
+                        <span>
+                           Provisioning and deprovisioning users within Google Workspace can be time-consuming and
+                           costly.
+                           Let Patronum fully automate all the administrator and user tasks to ensure an effective and
+                           secure process.
+                        </span>
+                     </p>
                   </div>
-               </div>
-               <div class="concept" data-scroll>
-                  <figure data-scroll data-scroll-speed="1">
-                     <img alt="fonts" src="assets/resources/img/portfolio-dmtca/font-typo.png">
-                  </figure>
                </div>
             </div>
             <div id="poster" class="blocco">
+               <div class="left_block grid_intern" data-scroll>
+                  <figure>
+                     <img alt="" src="/assets/resources/img/portfolio-dmtca/font-typo.png">
+                  </figure>
+               </div>
+            </div>
+            <div id=" poster" class="blocco">
                <div class="left_block grid_intern" data-scroll>
                   <figure>
                      <img alt="" src="/assets/resources/img/portfolio-dmtca/color-pallate.png">
@@ -293,13 +318,19 @@
                <div data-scroll class="grid_intern margin-r-46">
                   <div class="text_anim">
                      <h2>
-                        <span>MObile Preview </span>
+                        <span>Mobile Preview </span>
                      </h2>
                   </div>
                   <div class="text_anim spline_p">
-                     <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and costly.
-                        Let Patronum fully automate all the administrator and user tasks to ensure an effective and
-                        secure process.</p>
+                     <p>
+                        <span>
+                           Provisioning and deprovisioning users within Google Workspace can be time-consuming and
+                           costly.
+                           Let Patronum fully automate all the administrator and user tasks to ensure an effective
+                           and
+                           secure process.
+                        </span>
+                     </p>
                   </div>
                </div>
                <div class="left_block grid_intern" data-scroll>
@@ -316,9 +347,15 @@
                      </h2>
                   </div>
                   <div class="text_anim spline_p">
-                     <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and costly.
-                        Let Patronum fully automate all the administrator and user tasks to ensure an effective and
-                        secure process.</p>
+                     <p>
+                        <span>
+                           Provisioning and deprovisioning users within Google Workspace can be time-consuming and
+                           costly.
+                           Let Patronum fully automate all the administrator and user tasks to ensure an effective
+                           and
+                           secure process.
+                        </span>
+                     </p>
                   </div>
                </div>
                <div class="left_block grid_intern" data-scroll>
@@ -465,10 +502,6 @@
    <script src="/assets/vendors/lib/plugins.js"></script>
    <script src="/assets/resources/js/pages-js/preloader.js"></script>
    <script src="./assets/resources/js/cursor.js"></script>
-   <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-   <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
    <script src="assets/resources/js/page.js"></script>
    <script src="assets/resources/js/others.js"></script>
 
