--- a/quickx.html
+++ b/quickx.html
@@ -192,6 +192,20 @@
                         </div>
                     </div>
                 </div>
+                <div id="marquee">
+                    <div data-scroll data-scroll-target="#marquee">
+                        <div>
+                            <h2 data-scroll data-scroll-speed="6" data-scroll-direction="horizontal"><span>Google
+                                    workspace
+                                    manager</span></h2>
+                        </div>
+                        <figure data-scroll data-scroll-speed="5">
+                            <video autoplay="true" preload="true" loop>
+                                <source src="/quickx.mp4">
+                            </video>
+                        </figure>
+                    </div>
+                </div>
                 <div id="portf" class="grid_intern" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
