--- a/kedarkala.html
+++ b/kedarkala.html
@@ -213,137 +213,120 @@
                         </figure> -->
                     </div>
                 </div>
-                <div id="poster" class="blocco p-10" data-bgcolor="#161616" data-humcolor="#fff">
-                    <div class="left_block grid_intern p-d6" data-scroll>
+                <div style="background: #161616;" data-humcolor="#fff">
+                    <div id="poster" class="blocco p-10" style="background: #161616;" data-humcolor="#fff">
+                        <div class="left_block grid_intern p-d6" data-scroll>
+                            <figure>
+                                <img alt="" src="/assets/resources/img/kedar/website.png">
+                            </figure>
+                        </div>
+                    </div>
+                    <div id="poster" class="blocco p-10" style="background: #161616;" data-humcolor="#fff">
+                        <div class="left_block grid_intern p-d6" data-scroll>
+                            <figure>
+                                <img alt="" src="/assets/resources/img/kedar/mobile_s.png">
+                            </figure>
+                        </div>
+                    </div>
+
+                    <div id="poster" class="blocco" data-humcolor="#fff">
+                        <div class="left_block grid_intern" data-scroll>
+                            <figure>
+                                <img alt="" src="/assets/resources/img/kedar/intri.jpeg">
+                            </figure>
+                        </div>
+                    </div>
+                    <div id="portf" class="grid_intern">
+                        <div class="margin-r-46" data-scroll>
+                            <div class="text_anim">
+                                <h2 data-scroll-target="#portf" style="color:#fff;">
+                                    <span>WEBSITE TRANSACTION </span>
+                                </h2>
+                            </div>
+                            <div class="text_anim spline_p">
+                                <p style="color:#fff;">
+                                    <span>
+                                        Provisioning and deprovisioning users within Google Workspace can be
+                                        time-consuming
+                                        and costly. Let Patronum fully
+                                        automate all the administrator and user tasks to ensure an effective and secure
+                                        process.
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-section" data-scroll>
+                        <div class="reveal img-right">
+                            <video playsinline loop autoplay preload width="100%">
+                                <source src="/assets/resources/img/kedar/kedarkala-header.mp4" />
+                            </video>
+                        </div>
+                        <div class="reveal img-left">
+                            <video playsinline loop autoplay preload width="100%">
+                                <source src="/assets/resources/img/kedar/kedarkala-about.mp4" />
+                            </video>
+                        </div>
+                        <div class="reveal img-right">
+                            <video playsinline loop autoplay preload width="100%">
+                                <source src="/assets/resources/img/kedar/kedarkala-testimonials.mp4" />
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                <div id="portf" class="grid_intern">
+                    <div class="margin-r-46" data-scroll>
+                        <div class="text_anim">
+                            <h2 data-scroll-target="#portf">
+                                <span>TYPOGRAPHY </span>
+                            </h2>
+                        </div>
+                        <div class="text_anim spline_p">
+                            <p>
+                                <span>
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore
+                                    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                                    et ea rebum. Stet clita kasd
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="poster" class="blocco" data-humcolor="#fff">
+                    <div class="left_block grid_intern" data-scroll>
                         <figure>
-                            <img alt="" src="/assets/resources/img/kedar/website.png">
+                            <img alt="" src="/assets/resources/img/kedar/typo.png">
                         </figure>
                     </div>
                 </div>
-                <div class="module padding_on_top_velocities p-10" style="background: #161616;" data-humcolor="#fff">
-                    <div class="container-fluid">
-                        <div class="row no-gutters justify-content-center">
-                            <div class="col-1" data-scroll data-scroll-direction="vertical">
-                                <picture class="img-fluid">
-                                    <img class=" lazyloaded" src="/assets/resources/img/kedar/mobile-1.png">
-                                </picture>
-                            </div>
-
-                            <div class="col-2" data-scroll data-scroll-direction="vertical">
-                                <picture class="img-fluid">
-                                    <img class=" lazyloaded" src="/assets/resources/img/kedar/mobile-2.png">
-                                </picture>
-                            </div>
-                            <div class="col-1" data-scroll data-scroll-direction="vertical">
-                                <picture class="img-fluid">
-                                    <img class=" lazyloaded" src="/assets/resources/img/kedar/mobile-3.png">
-                                </picture>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="module padding_on_top_velocities" style="background: #161616;" data-humcolor="#fff">
-                    <div class="container-fluid">
-                        <div class="row no-gutters justify-content-center">
-                            <div class="col-1" data-scroll>
-                                <figure class="img-fluid">
-                                    <img class=" lazyloaded" src="/assets/resources/img/kedar/work-image-1.png">
-                                </figure>
-                            </div>
-                            <div class="col-2" data-scroll>
-                                <figure class="img-fluid">
-                                    <img class=" lazyloaded" src="/assets/resources/img/kedar/work-image-2.png">
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div id="portf" class="grid_intern">
                     <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
-                                <span>Color </span>
+                                <span>Colour </span>
                             </h2>
                         </div>
                         <div class="text_anim spline_p">
                             <p>
                                 <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore
+                                    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                                    et ea rebum. Stet clita kasd
                                 </span>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div id="colorc" class="grid_intern">
-                    <div>
-                        <h2 data-scroll-target="#colorc" data-scroll data-scroll-speed="2">
-                            <span> Colors</span>
-                            <span class="reds"> Palette</span>
-                        </h2>
-                        <ul data-scroll style="grid-template-columns: 40% 30% 20% 15%">
-                            <li>
-                                <div class="Chiaro">
-                                    <div style="background: #fff;
-                            box-shadow: 1px 1px 10px #00000038;">
-
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="Chiaro">
-                                    <div style="background:#BDBDBD;">
-
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="Chiaro">
-                                    <div style="background:#222222;">
-
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="Chiaro">
-                                    <div style="background:#E02826 ;">
-
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="Chiaro">
-                                    <div style="background:linear-gradient(45deg, #EB1034, #1B3E59)">
-
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                <div id="poster" class="blocco" data-humcolor="#fff">
+                    <div class="left_block grid_intern" data-scroll>
+                        <figure>
+                            <img alt="" src="/assets/resources/img/kedar/Colours_.png">
+                        </figure>
                     </div>
                 </div>
-                <div id="portf" class="grid_intern">
-                    <div class="margin-r-46" data-scroll>
-                        <div class="text_anim">
-                            <h2 data-scroll-target="#portf">
-                                <span>Fonts </span>
-                            </h2>
-                        </div>
-                        <div class="text_anim spline_p">
-                            <p>
-                                <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
-                                </span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+
                 <div id="poster" class="blocco">
                     <div class="left_block grid_intern" data-scroll>
                         <figure>
@@ -379,26 +362,7 @@
                         </figure>
                     </div>
                 </div>
-                <div class="image-section" data-scroll style="background-color:#f50c37 ;" data-humcolor="#fff">
-                    <div class="reveal img-right">
-                        <img src="/assets/resources/img/Certvault-Portfolio/web-1.jpeg">
-                    </div>
-                    <div class="reveal img-left">
-                        <img src="/assets/resources/img/Certvault-Portfolio/web-2.png">
-                    </div>
-                    <div class="reveal img-right">
-                        <img src="/assets/resources/img/Certvault-Portfolio/web-3.png">
-                    </div>
-                    <div class="reveal img-left">
-                        <img src="/assets/resources/img/Certvault-Portfolio/web-4.png">
-                    </div>
-                    <div class="reveal img-right">
-                        <img src="/assets/resources/img/Certvault-Portfolio/web-5.png">
-                    </div>
-                    <div class="reveal img-left">
-                        <img src="/assets/resources/img/Certvault-Portfolio/web-6.png">
-                    </div>
-                </div>
+
                 <div id="portf" class="grid_intern" data-scroll data-bgcolor="#fff" data-humcolor="#000">
                     <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
